# projet_crypto_proxy_https_2023

./: .gitignore  CMakeLists.txt  README.md  basic_proxy.1  ca_v2.crt  ca_v2.key  full_proxy.1  proxy.py
prototypes/: note_redaction_readme  parsing_header.c  proxy_https_v1.c  socket_to_socket.c  socket_to_socket.h  yara.c  yara.h
prototypes/yara/: test.yara
src/: basic_proxy.c  full_proxy.c  generate_custom_certificat.c  interactive.c  interactive.h  regex.c  regex.h  sni_callback.c  sni_callback.h
